// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`application 1`] = `
"<div class=\\"container mt-5\\">
    <div class=\\"row\\">
        <div class=\\"col-sm-8 col-12\\">
            <div class=\\"card\\">
                <div class=\\"card-body\\">
                    <h5 class=\\"card-title\\">Sign up</h5>
                    <div data-container=\\"sign-up\\">
                        <form data-form=\\"sign-up\\" method=\\"post\\">
                            <div class=\\"form-group\\">
                                <label for=\\"sign-up-name\\">Name</label>
                                <input id=\\"sign-up-name\\" type=\\"text\\" class=\\"form-control\\" name=\\"name\\">
                            </div>
                            <div class=\\"form-group\\">
                                <label for=\\"sign-up-email\\">Email<sup>*</sup></label>
                                <input id=\\"sign-up-email\\" required=\\"\\" type=\\"email\\" class=\\"form-control\\" name=\\"email\\">
                            </div>
                            <div class=\\"form-group\\">
                                <label for=\\"sign-up-password\\">Password<sup>*</sup></label>
                                <input id=\\"sign-up-password\\" required=\\"\\" type=\\"password\\" class=\\"form-control\\" name=\\"password\\">
                            </div>
                            <div class=\\"form-group\\">
                                <label for=\\"sign-up-password-confirmation\\">Password Confirmation<sup>*</sup></label>
                                <input id=\\"sign-up-password-confirmation\\" required=\\"\\" type=\\"password\\" class=\\"form-control\\" name=\\"passwordConfirmation\\">
                            </div>
                            <input type=\\"submit\\" class=\\"btn btn-primary\\" disabled=\\"\\" value=\\"Submit\\">
                        </form>
                    </div>
                </div>
            </div>
        </div>
    </div>
</div>"
`;

exports[`application 2`] = `
"<div class=\\"container mt-5\\">
    <div class=\\"row\\">
        <div class=\\"col-sm-8 col-12\\">
            <div class=\\"card\\">
                <div class=\\"card-body\\">
                    <h5 class=\\"card-title\\">Sign up</h5>
                    <div data-container=\\"sign-up\\">
                        <form data-form=\\"sign-up\\" method=\\"post\\">
                            <div class=\\"form-group\\">
                                <label for=\\"sign-up-name\\">Name</label>
                                <input id=\\"sign-up-name\\" type=\\"text\\" class=\\"form-control\\" name=\\"name\\" value=\\"Petya\\">
                            </div>
                            <div class=\\"form-group\\">
                                <label for=\\"sign-up-email\\">Email<sup>*</sup></label>
                                <input id=\\"sign-up-email\\" required=\\"\\" type=\\"email\\" class=\\"form-control is-invalid\\" name=\\"email\\" value=\\"wrong-email\\">
                                <div class=\\"invalid-feedback\\">Value is not a valid email</div>
                            </div>
                            <div class=\\"form-group\\">
                                <label for=\\"sign-up-password\\">Password<sup>*</sup></label>
                                <input id=\\"sign-up-password\\" required=\\"\\" type=\\"password\\" class=\\"form-control is-invalid\\" name=\\"password\\" value=\\"long password without confirmation\\">
                                <div class=\\"invalid-feedback\\">Password confirmation does not match to password</div>
                            </div>
                            <div class=\\"form-group\\">
                                <label for=\\"sign-up-password-confirmation\\">Password Confirmation<sup>*</sup></label>
                                <input id=\\"sign-up-password-confirmation\\" required=\\"\\" type=\\"password\\" class=\\"form-control\\" name=\\"passwordConfirmation\\">
                            </div>
                            <input type=\\"submit\\" class=\\"btn btn-primary\\" disabled=\\"\\" value=\\"Submit\\">
                        </form>
                    </div>
                </div>
            </div>
        </div>
    </div>
</div>"
`;

exports[`application 3`] = `
"<div class=\\"container mt-5\\">
    <div class=\\"row\\">
        <div class=\\"col-sm-8 col-12\\">
            <div class=\\"card\\">
                <div class=\\"card-body\\">
                    <h5 class=\\"card-title\\">Sign up</h5>
                    <div data-container=\\"sign-up\\">
                        <form data-form=\\"sign-up\\" method=\\"post\\">
                            <div class=\\"form-group\\">
                                <label for=\\"sign-up-name\\">Name</label>
                                <input id=\\"sign-up-name\\" type=\\"text\\" class=\\"form-control\\" name=\\"name\\" value=\\"Petya\\">
                            </div>
                            <div class=\\"form-group\\">
                                <label for=\\"sign-up-email\\">Email<sup>*</sup></label>
                                <input id=\\"sign-up-email\\" required=\\"\\" type=\\"email\\" class=\\"form-control\\" name=\\"email\\" value=\\"\\">
                            </div>
                            <div class=\\"form-group\\">
                                <label for=\\"sign-up-password\\">Password<sup>*</sup></label>
                                <input id=\\"sign-up-password\\" required=\\"\\" type=\\"password\\" class=\\"form-control is-invalid\\" name=\\"password\\" value=\\"qwert\\">
                                <div class=\\"invalid-feedback\\">Must be at least 6 letters</div>
                            </div>
                            <div class=\\"form-group\\">
                                <label for=\\"sign-up-password-confirmation\\">Password Confirmation<sup>*</sup></label>
                                <input id=\\"sign-up-password-confirmation\\" required=\\"\\" type=\\"password\\" class=\\"form-control\\" name=\\"passwordConfirmation\\">
                            </div>
                            <input type=\\"submit\\" class=\\"btn btn-primary\\" disabled=\\"\\" value=\\"Submit\\">
                        </form>
                    </div>
                </div>
            </div>
        </div>
    </div>
</div>"
`;

exports[`application 4`] = `
"<div class=\\"container mt-5\\">
    <div class=\\"row\\">
        <div class=\\"col-sm-8 col-12\\">
            <div class=\\"card\\">
                <div class=\\"card-body\\">
                    <h5 class=\\"card-title\\">Sign up</h5>
                    <div data-container=\\"sign-up\\">
                        <form data-form=\\"sign-up\\" method=\\"post\\">
                            <div class=\\"form-group\\">
                                <label for=\\"sign-up-name\\">Name</label>
                                <input id=\\"sign-up-name\\" type=\\"text\\" class=\\"form-control\\" name=\\"name\\" value=\\"Petya\\">
                            </div>
                            <div class=\\"form-group\\">
                                <label for=\\"sign-up-email\\">Email<sup>*</sup></label>
                                <input id=\\"sign-up-email\\" required=\\"\\" type=\\"email\\" class=\\"form-control\\" name=\\"email\\" value=\\"support@hexlet.io\\">
                            </div>
                            <div class=\\"form-group\\">
                                <label for=\\"sign-up-password\\">Password<sup>*</sup></label>
                                <input id=\\"sign-up-password\\" required=\\"\\" type=\\"password\\" class=\\"form-control is-invalid\\" name=\\"password\\" value=\\"qwert\\">
                                <div class=\\"invalid-feedback\\">Must be at least 6 letters</div>
                            </div>
                            <div class=\\"form-group\\">
                                <label for=\\"sign-up-password-confirmation\\">Password Confirmation<sup>*</sup></label>
                                <input id=\\"sign-up-password-confirmation\\" required=\\"\\" type=\\"password\\" class=\\"form-control\\" name=\\"passwordConfirmation\\" value=\\"qwerty\\">
                            </div>
                            <input type=\\"submit\\" class=\\"btn btn-primary\\" disabled=\\"\\" value=\\"Submit\\">
                        </form>
                    </div>
                </div>
            </div>
        </div>
    </div>
</div>"
`;

exports[`application 5`] = `
"<div class=\\"container mt-5\\">
    <div class=\\"row\\">
        <div class=\\"col-sm-8 col-12\\">
            <div class=\\"card\\">
                <div class=\\"card-body\\">
                    <h5 class=\\"card-title\\">Sign up</h5>
                    <div data-container=\\"sign-up\\">User Created!</div>
                </div>
            </div>
        </div>
    </div>
</div>"
`;

exports[`application 6`] = `
"<div class=\\"container mt-5\\">
    <div class=\\"row\\">
        <div class=\\"col-sm-8 col-12\\">
            <div class=\\"card\\">
                <div class=\\"card-body\\">
                    <h5 class=\\"card-title\\">Sign up</h5>
                    <div data-container=\\"sign-up\\">
                        <form data-form=\\"sign-up\\" method=\\"post\\">
                            <div class=\\"form-group\\">
                                <label for=\\"sign-up-name\\">Name</label>
                                <input id=\\"sign-up-name\\" type=\\"text\\" class=\\"form-control\\" name=\\"name\\">
                            </div>
                            <div class=\\"form-group\\">
                                <label for=\\"sign-up-email\\">Email<sup>*</sup></label>
                                <input id=\\"sign-up-email\\" required=\\"\\" type=\\"email\\" class=\\"form-control\\" name=\\"email\\">
                            </div>
                            <div class=\\"form-group\\">
                                <label for=\\"sign-up-password\\">Password<sup>*</sup></label>
                                <input id=\\"sign-up-password\\" required=\\"\\" type=\\"password\\" class=\\"form-control\\" name=\\"password\\">
                            </div>
                            <div class=\\"form-group\\">
                                <label for=\\"sign-up-password-confirmation\\">Password Confirmation<sup>*</sup></label>
                                <input id=\\"sign-up-password-confirmation\\" required=\\"\\" type=\\"password\\" class=\\"form-control\\" name=\\"passwordConfirmation\\">
                            </div>
                            <input type=\\"submit\\" class=\\"btn btn-primary\\" disabled=\\"\\" value=\\"Submit\\">
                        </form>
                    </div>
                </div>
            </div>
        </div>
    </div>
</div>"
`;
